<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F78C1D"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:background="#F78C1D"
            android:contentDescription="@null"
            android:outlineAmbientShadowColor="#F78C1D"
            android:src="@drawable/custom" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="352dp"
            android:layout_height="50dp"
            android:hint="@string/LoginPhoneText"
            android:inputType="phone"

            android:autofillHints="@string/autofillphone"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="352dp"
            android:layout_height="65dp"

            android:hint="@string/passwordText"

            android:inputType="textPassword"
            android:textAlignment="center"
            android:autofillHints="@string/autofillphone" />

        <Button
            android:id="@+id/Loginbutton"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="0.4in"
            android:layout_marginVertical="20sp"
            android:background="#FF5722"
            android:text="Login"
            android:textColorLink="#D60101" />

        <Button
            android:id="@+id/ForgetPasswordButton"
            android:layout_width="261dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="50dp"
            android:background="#F78C1D"
            android:text="ForgotPassword?"
            android:textColor="#D60101" />

        <TextView
            android:layout_width="149dp"
            android:layout_height="22dp"
            android:layout_marginHorizontal="115dp"
            android:layout_marginVertical="20dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20dp" />




        <Button
            android:id="@+id/Signupbutton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="105dp"
            android:background="#FF5722"
            android:text="@string/signup"
            android:textColorLink="#D60101" />



    </LinearLayout>

</ScrollView>